--- a/InterviewQuestions/InterviewQuestions.vcxproj.filters
+++ b/InterviewQuestions/InterviewQuestions.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="StringCompare.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IntergerToAscii.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StringCompare.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IntergerToAscii.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
