--- a/InterviewQuestions/InterviewQuestions.vcxproj.filters
+++ b/InterviewQuestions/InterviewQuestions.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="AsciiToInteger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TwoSum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StringCompare.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AsciiToInteger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TwoSum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
