--- a/InterviewQuestions/InterviewQuestions.vcxproj
+++ b/InterviewQuestions/InterviewQuestions.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AsciiToInteger.cpp" />
+    <ClCompile Include="CircularList.cpp" />
     <ClCompile Include="IntergerToAscii.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="StringCompare.cpp" />
@@ -151,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsciiToInteger.h" />
+    <ClInclude Include="CircularList.h" />
     <ClInclude Include="IntergerToAscii.h" />
     <ClInclude Include="StringCompare.h" />
     <ClInclude Include="TwoSum.h" />
