--- a/InterviewQuestions/InterviewQuestions.vcxproj.filters
+++ b/InterviewQuestions/InterviewQuestions.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TwoSum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CircularList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StringCompare.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TwoSum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CircularList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
