--- a/InterviewQuestions/InterviewQuestions.vcxproj
+++ b/InterviewQuestions/InterviewQuestions.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="CircularList.cpp" />
     <ClCompile Include="IntergerToAscii.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ReverseList.cpp" />
     <ClCompile Include="StringCompare.cpp" />
     <ClCompile Include="TwoSum.cpp" />
   </ItemGroup>
@@ -154,6 +155,7 @@
     <ClInclude Include="AsciiToInteger.h" />
     <ClInclude Include="CircularList.h" />
     <ClInclude Include="IntergerToAscii.h" />
+    <ClInclude Include="ReverseList.h" />
     <ClInclude Include="StringCompare.h" />
     <ClInclude Include="TwoSum.h" />
   </ItemGroup>
