--- a/InterviewQuestions/InterviewQuestions.vcxproj.filters
+++ b/InterviewQuestions/InterviewQuestions.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="CircularList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReverseList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StringCompare.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CircularList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ReverseList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
