--- a/InterviewQuestions/InterviewQuestions.vcxproj.filters
+++ b/InterviewQuestions/InterviewQuestions.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ReverseList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReverseWordOrder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StringCompare.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ReverseList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ReverseWordOrder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
